@startuml

title __CONTROL's Class Diagram__\n

  namespace com.shuai.musicplayer2 {
    namespace control {
      class com.shuai.musicplayer2.control.Download {
          - mDl : ListView
          # onCreate()
          - setDl()
      }
    }
  }
  

  namespace com.shuai.musicplayer2 {
    namespace control {
      class com.shuai.musicplayer2.control.dlAdapter {
          + getCount()
          + getItem()
          + getItemId()
          + getView()
      }
    }
  }
  

  namespace com.shuai.musicplayer2 {
    namespace control {
      class com.shuai.musicplayer2.control.Main {
          {static} + mHandler : Handler
          {static} - TAG : String
          - mEditText : EditText
          - mKeyWord : String
          - mProgressBar : ProgressBar
          - mTopList : RecyclerView
          + dlList()
          + like()
          + search()
          # onCreate()
          - initView()
      }
    }
  }
  

  namespace com.shuai.musicplayer2 {
    namespace control {
      class com.shuai.musicplayer2.control.Player {
          {static} + sHandler : Handler
          {static} - LAST_MUSIC : int
          {static} - NEXT_MUSIC : int
          {static} - TAG : String
          - isLike : boolean
          - isTouch : boolean
          - mDownload : Button
          - mLast : Button
          - mLike : Button
          - mMenuSize : int
          {static} - mMusicId : String
          - mMv : Button
          - mNext : Button
          - mPic : ImageView
          {static} - mPosition : int
          - mRotation : ObjectAnimator
          - mSeek : SeekBar
          - mSp : Button
          + changeMusic()
          # onCreate()
          # onDestroy()
          - initBindService()
          - initData()
          - initEvent()
          - initService()
          - initView()
          - startPlay()
      }
    }
  }
  

  namespace com.shuai.musicplayer2 {
    namespace control {
      class com.shuai.musicplayer2.control.PlayerConnection {
          + onServiceConnected()
          + onServiceDisconnected()
      }
    }
  }
  

  namespace com.shuai.musicplayer2 {
    namespace control {
      class com.shuai.musicplayer2.control.Result {
          {static} + mHandler : Handler
          - mInfo : TextView
          - mProgressBar : ProgressBar
          - mRvResult : RecyclerView
          - mTag : String
          + initListener()
          # onCreate()
          - InitView()
          - update()
      }
    }
  }
  

  com.shuai.musicplayer2.control.Download -up-|> androidx.appcompat.app.AppCompatActivity
  com.shuai.musicplayer2.control.Download +-down- com.shuai.musicplayer2.control.Download.dlAdapter
  com.shuai.musicplayer2.control.Download.dlAdapter -up-|> android.widget.BaseAdapter
  com.shuai.musicplayer2.control.Main -up-|> androidx.appcompat.app.AppCompatActivity
  com.shuai.musicplayer2.control.Player -up-|> androidx.appcompat.app.AppCompatActivity
  com.shuai.musicplayer2.control.Player o-- com.shuai.musicplayer2.interfaces.IPlayerController : mController
  com.shuai.musicplayer2.control.Player o-- com.shuai.musicplayer2.domain.MusicListInfo : mMusicInfo
  com.shuai.musicplayer2.control.Player o-- com.shuai.musicplayer2.control.Player.PlayerConnection : mPlayerConnection
  com.shuai.musicplayer2.control.Player o-- com.shuai.musicplayer2.interfaces.IPlayerViewController : mPlayerViewController
  com.shuai.musicplayer2.control.Player +-down- com.shuai.musicplayer2.control.Player.PlayerConnection
  com.shuai.musicplayer2.control.Player.PlayerConnection .up.|> android.content.ServiceConnection
  com.shuai.musicplayer2.control.Result -up-|> androidx.appcompat.app.AppCompatActivity
  com.shuai.musicplayer2.control.Result o-- com.shuai.musicplayer2.adapter.MusicListAdapter : mAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
